# announce

./: .gitignore  Dockerfile  Procfile  README.md  README.rst  docker-compose.yml  pyproject.toml  requirements.txt
announce/: .models.py.swn  .models.py.swo  .models.py.swp  __main__.py  bot.py  const.py  housekeeping.py  models.py  plugins.py  server.py
tests/: test_announce.py
views/: action.html  base.html  dash.html  event.html  events.html  group.html  login.html
